Improve CDN files include

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,10 +1,7 @@
-// DEFAULT
+// CONFIG
 @import "default/configs/default";
-@import "default/reset";
-@import "default/extend";
-@import "default/common";
 
-// THEMES
+// THEME
 @import "default/themes/truecode";
 
 // COMPONENTS
