--- a/src/css/default/configs/_default.scss
+++ b/src/css/default/configs/_default.scss
@@ -1,3 +1,7 @@
+@import "../reset";
+@import "../extend";
+@import "../common";
+
 $grid-columns:        12;
 $grid-columns-margin: 1rem;
 $grid-column-name:    'c';
