--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,30 +1,4 @@
-// CONFIG
+@import "default/reset";
+@import "default/extend";
 @import "default/configs/default";
-
-// THEME
-@import "default/themes/truecode";
-
-// COMPONENTS
 @import "default/grid";
-//@import 'default/menu';
-//@import 'default/breadcrumbs';
-
-header, .header {
-  @extend %header !optional;
-}
-
-main, .content {
-  position: relative;
-  @extend %content !optional;
-}
-
-aside, .sidebar {
-  position: absolute;
-  right: 0;
-  height: 100%;
-  @extend %sidebar !optional;
-}
-
-footer, .footer {
-  @extend %footer !optional;
-}
